fix: Fixed tooltop appear behind other elem

--- a/src/assets/sass/_mixins.sass
+++ b/src/assets/sass/_mixins.sass
@@ -28,6 +28,7 @@
     border-radius: 5px
     padding: 8px 0
     text-align: center
+    z-index: 3
 
 @mixin tooptip($content, $offsetVal: -10px)
   &:hover::after
